--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,14 @@
 __pycache__/
 .env
 *.pyc
+# Vector store artifacts
+data/vector_store/*
+!data/vector_store/.gitkeep
+
+# Analytics logs
+data/analytics/*
+!data/analytics/.gitkeep
+
+# Python cache
+__pycache__/
+*.pyc
